[package]
authors = ["Meitao Lin <mtl>"]
description = "Safe rm alternative with audit trail and short IDs"
edition = "2021"
license = "MIT"
name = "srm"
version = "1.2.1"

[dependencies]
bytesize = "1.3"
chrono = {version = "0.4.43", features = ["clock"]}
clap = {version = "4.5", features = ["derive"]}
ctrlc = "3.4"
fs2 = "0.4"
indicatif = "0.17"
libc = "0.2"
md5 = "0.7"
memmap2 = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
